25-fleet-server/25.2-fleet-server.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fleet-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fleet-server
  template:
    metadata:
      labels:
        app: fleet-server
    spec:
      automountServiceAccountToken: false
      containers:
      - name: elastic-agent
        image: docker.elastic.co/elastic-agent/elastic-agent:9.3.4
        ports:
        - containerPort: 8220
          protocol: TCP
        resources: {}
        volumeMounts:
        - name: certs
          mountPath: /mnt/certs
          readOnly: true
        - name: openbsd-certs
          mountPath: /mnt/additional-certs/ca.crt
          readOnly: true
      volumes:
      - name: certs
        secret:
          defaultMode: 420
          optional: false
          secretName: fleet-server-ssl
      - name: openbsd-certs
        secret:
          defaultMode: 420
          optional: false
          secretName: openbsd-cert
